--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body></body>
 </html>
 
-
-<div class="phone-icon phone-icon--mob">
-	<a href="tel:+79178800980">
-		<img src="icons8-telefon-50.png" alt="изображение трубки телефона">
-	</a>
+<div class="phone_container phone-icon--mob">
+    <div class="phone-icon ">
+        <a href="tel:+79178800980">
+            <img
+                src="icons8-telefon-50.png"
+                alt="изображение трубки телефона" />
+        </a>
+    </div>
 </div>
-
