--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
         <title>Document</title>
         <link rel="stylesheet" href="style.css" />
     </head>
-    <body></body>
-</html>
-
+    <body>
+        
 <div class="phone_container phone-icon--mob">
     <div class="phone-icon ">
         <a href="tel:+79178800980">
@@ -18,3 +17,11 @@
         </a>
     </div>
 </div>
+
+
+<div class="test">
+
+</div>
+    </body>
+</html>
+
