--- a/index.html
+++ b/index.html
@@ -7,21 +7,20 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        
-<div class="phone_container phone-icon--mob">
-    <div class="phone-icon ">
-        <a href="tel:+79178800980">
+        <div class="phone_container phone-icon--mob">
+            <div class="phone-icon">
+                <a href="tel:+79178800980">
+                    <img
+                        src="icons8-telefon-50.png"
+                        alt="изображение трубки телефона" />
+                </a>
+            </div>
+        </div>
+
+        <div class="test">
             <img
                 src="icons8-telefon-50.png"
                 alt="изображение трубки телефона" />
-        </a>
-    </div>
-</div>
-
-
-<div class="test">
-
-</div>
+        </div>
     </body>
 </html>
-
