--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
         </div>
 
         <div class="test">
-            <img
-                src="icons8-telefon-50.png"
-                alt="изображение трубки телефона" />
+            <a href="tel:+79178800980">
+                <img
+                    src="icons8-telefon-50.png"
+                    alt="изображение трубки телефона" />
+            </a>
         </div>
     </body>
 </html>
