--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
         <title>Document</title>
         <link rel="stylesheet" href="style.css" />
     </head>
-    <body>
-        <div class="phone_container phone-icon--mob">
-            <div class="phone-icon">
+    
+            <div class="phone-icon phone-icon--mob">
                 <a href="tel:+79178800980">
                     <img
                         src="icons8-telefon-50.png"
                         alt="изображение трубки телефона" />
                 </a>
             </div>
-        </div>
+      
 
         <div class="test">
             <a href="tel:+79178800980">
@@ -24,5 +23,5 @@
                     alt="изображение трубки телефона" />
             </a>
         </div>
-    </body>
+    </>
 </html>
