add anim and delete test

--- a/index.html
+++ b/index.html
@@ -6,22 +6,21 @@
         <title>Document</title>
         <link rel="stylesheet" href="style.css" />
     </head>
-    
-            <div class="phone-icon phone-icon--mob">
-                <a href="tel:+79178800980">
-                    <img
-                        src="icons8-telefon-50.png"
-                        alt="изображение трубки телефона" />
-                </a>
-            </div>
-      
-
-        <div class="test">
+    <body>
+        <div class="phone-icon phone-icon--mob">
             <a href="tel:+79178800980">
                 <img
                     src="icons8-telefon-50.png"
                     alt="изображение трубки телефона" />
             </a>
         </div>
-    </>
+
+        <!-- <div class="test">
+            <a href="tel:+79178800980">
+                <img
+                    src="icons8-telefon-50.png"
+                    alt="изображение трубки телефона" />
+            </a>
+        </div> -->
+    </body>
 </html>
